package com.lupulo.cerveceria.model;

public enum Rol {
  USER,
  ADMIN
}
